Fixed missing space btw header and content from border colors

--- a/css/main.scss
+++ b/css/main.scss
@@ -54,6 +54,10 @@ $on-laptop:        800px;
 //         "syntax-highlighting"
 // ;
 
+.site-header {
+    margin-bottom: 1rem;
+}
+
 .cool-colors {
     background: #FFD500 none repeat scroll 0% 0%;
     font-size: 3rem !important;
